# open-finder

./: .gitignore  Cargo.toml  generate_graph.py
crawler/: Cargo.toml
crawler/src/: collection.rs  content.rs  link.rs  main.rs  manager.rs  prelude.rs
src/: collection.rs  content.rs  link.rs  main.rs  manager.rs  page.rs  prelude.rs  prtocols.rs
txt-extractor/: Cargo.toml
txt-extractor/src/: lib.rs
