[package]
name = "open-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest={ version = "0.11", features = [ "gzip"] }
progress_bar="1.0.2"
tokio = { version = "1.0", features = ["full"] }