[package]
name = "open-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest={ version = "0.11", features = [ "gzip", "cookies"] }
progress_bar="1.0.3"
tokio = { version = "1.0", features = ["full"] }
console = "0.15"
petgraph = "0.6"
sha1="0.10"
html-escape="0.2"
rpassword = "7.2.0"
urlencoding = "2.1.3"
