workspace = { members = ["txt-extractor"] }
[package]
name = "open-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["gzip", "cookies"] }
progress_bar = "1.0.3"
tokio = { version = "1.0", features = ["full"] }
console = "0.15"
petgraph = "0.6"
html-escape = "0.2"
rpassword = "7.2.0"
urlencoding = "2.1.3"
futures = "0.3.28"
html2text = "0.12.0"
meilisearch-sdk = "0.24.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md5 = "0.7.0"
txt_extractor = { path = "../txt-extractor" }
